Fixed the gap between button and menu

--- a/src/assets/_project/_blocks/layout/header/_site-nav.scss
+++ b/src/assets/_project/_blocks/layout/header/_site-nav.scss
@@ -38,6 +38,7 @@
 	.nav-link {
 		display: inline-block;
 		background-color: transparent;
+		border: 0;
 		border-radius: 4px 4px 0 0;
 		padding: 16px 16px 5px;
 
@@ -240,7 +241,8 @@
 		display: block;
 		opacity: 0;
 		visibility: hidden;
-		transition: opacity .3s ease, visibility 0s ease .3s;
+		transition: none;
+		top: -1px;
 
 		&.show {
 			opacity: 1;
